<resources>
    <string name="app_name">TrackMap</string>

    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="leave">Leave</string>
    <string name="settings">Settings</string>
    <string name="action_crop">Crop</string>
    <string name="you">you</string>
    <string name="by_you">you</string>

    <string name="foreground_notification_summary">Tracking is active</string>
    <string name="foreground_notification_content_text">Live Tracking location is active</string>
    <string name="foreground_notification_big_text">While tracking is active user location is being monitored. Stop tracking action is available below</string>
    <string name="foreground_notification_stop_tracking_action">Stop tracking</string>

    <string name="title_home">Home</string>
    <string name="title_join">Join</string>
    <string name="title_create">Create</string>
    <string name="title_share">Share</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_crash">Force crash</string>

    <string name="search_trackmap">Search TrackMap</string>
    <string name="your_trackmaps">Your TrackMaps</string>

    <string name="create_code">Code</string>
    <string name="create_name">Name</string>
    <string name="create_description">Description</string>
    <string name="create_trackmap">Create TrackMap</string>
    <string name="create_trackmap_validation">Please, fill in all the fields</string>
    <string name="create_info_text">Once the TrackMap is created it could be shared with the share action.</string>

    <string name="code_helper_text">Unique TrackMap code</string>
    <string name="name_helper_text">Name for the TrackMap</string>
    <string name="description_helper_text">Short TrackMap description</string>
    <string name="creation_template">Created <b>%1$s</b> by %2$s</string>
    <string name="sampleTrackMapCode">999–333</string>

    <string name="splash_slogan">Share your location with everybody you want.</string>
    <string name="splash_author">By Handysparksoft</string>

    <string name="leave_trackmap_question">Leave TrackMap \"%1$s\"?</string>
    <string name="no_connection_error">No internet connection available</string>
    <string name="unknown_error">Unknown error occurred: %1$s</string>

    <string name="join_trackmap_code">Code</string>
    <string name="join_trackmap_code_helper">Enter TrackMap code to join</string>
    <string name="join_trackmap_validation">Please, provide a valid TrackMap code</string>
    <string name="permission_need">Location permission is needed</string>
    <string name="tooltip_frame_all_participants">Frame all participants</string>

    <string name="tooltip_map_style">Change map style</string>
    <string name="map_type_title">Map type</string>
    <string name="map_type_default">Default</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="switch_to_map_type">Switch to map type</string>
    <string name="live_tracking_autostart_info">Live tracking will start in</string>

    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="distance">Distance</string>
    <string name="distance_from_you">Distance from you</string>

    <string name="menu_main_order">Order</string>
    <string name="menu_main_share_app">Share app</string>
    <string name="menu_main_rate_this_app">Rate this app</string>
    <string name="menu_main_contact">Contact</string>

    <string name="share_app_title">Try this App!</string>
    <string name="share_app_content">Download TrackMap and share your location with everybody you want.</string>
    <string name="share_app_google_play_url" translatable="false">https://play.google.com/store/apps/details?id=com.handysparksoft.trackmap</string>

    <string name="intent_contact_email" translatable="false">handysparksoft@gmail.com</string>
    <string name="intent_contact_subject">[TrackMap] Contact info</string>
    <string name="intent_contact_text">Hi TrackMap team,\n\n -> Your info here…\n\n Cheers.</string>

    <string name="sort_trackmaps_title">Sort TrackMaps by</string>
    <string name="sort_trackmaps_by_date">Date (recent first)</string>
    <string name="sort_trackmaps_by_name">Name (alphabetically)</string>
    <string name="sort_trackmaps_by_participant_count">Number of participants</string>
    <string name="sort_trackmaps_by_owner">Owner (Created by you first)</string>
    <string name="sort_trackmaps_by_live_tracking">Live Tracking state</string>

    <string name="profile_title">Profile</string>
    <string name="profile_nickname">Nickname</string>
    <string name="profile_nickname_helper_text">Short name</string>
    <string name="profile_fullname">Full name</string>
    <string name="profile_fullname_helper_text">Your full name</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_phone_helper_text">Phone</string>
    <string name="profile_save">Save</string>
    <string name="user_profile_picture">User picture</string>
    <string name="user_profile_pick_a_picture">Pick a picture</string>

    <string name="user_info_title">User Info</string>
    <string name="user_info_show_marker_info">Show info tooltip</string>
    <string name="user_info_follow">Follow</string>

    <string name="user_info_last_activity">%1$s %2$s ago</string>
    <plurals name="seconds">
        <item quantity="one">second</item>
        <item quantity="other">seconds</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>

    <string name="share_trackmap_link_title">Join this TrackMap!</string>
    <string name="share_trackmap_link_content">Join TrackMap \"%1$s\" here in this link: %2$s\nOr just join using this code: \"%3$s\"</string>

    <string name="trackmap_item_name">Name:</string>
    <string name="trackmap_item_description">Description:</string>
    <string name="trackmap_item_code">Code</string>
    <string name="trackmap_item_participants">Participants</string>
    <string name="trackmap_item_action_leave">Leave</string>
    <string name="trackmap_item_action_go">Go!</string>

    <string name="spotlight_welcome">Welcome to TrackMap</string>
    <string name="spotlight_skip">Skip</string>
    <string name="spotlight_next">Next</string>

    <string name="onboarding_profile">First, set your profile data here</string>
    <string name="onboarding_bottom_nav_join">Then join a TrackMap with a code</string>
    <string name="onboarding_bottom_nav_create">Or just create your own one and share it!</string>
    <string name="onboarding_trackmaps">Here you will see all your joined or created TrackMaps</string>
    <string name="onboarding_menu">Options to sort the data or share the app will be here</string>
    <string name="onboarding_bottom_nav_home">Come home whenever you want :) </string>

    <string name="push_notification_user_joined_title">New TrackMap participant</string>
    <string name="push_notification_user_joined_message">%1$s has joined %2$s</string>
    <string name="push_notification_generic_user_joined_message">A new participant</string>

    <string name="participants_title">Participants</string>
    <string name="participants_subtitle">Created by %1$s, %2$s</string>
    <string name="participants_count_title">%1$d Participants</string>
    <string name="participants_content_description">Participant list</string>
    <string name="participants_image_description">Participant image</string>
    <string name="participants_owner_tag">Group\'s Owner</string>

    <string name="ping_participants_question">You are going to ping all participants of \"%1$s\" to let them know you have activated your live tracking</string>
    <string name="ping_participants_positive_button">Proceed</string>
    <string name="ping_participants_non_live_tracking_active">First activate the live tracking to notify other participants</string>

    <string name="push_notification_ping_user_being_tracked_title">%1$s</string>
    <string name="push_notification_ping_user_being_tracked_participant">%1$s\n📌 Sharing live tracking</string>
</resources>
