<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuSort"
        android:icon="@drawable/ic_sort_white"
        android:title="@string/menu_main_order"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuShare"
        android:icon="@drawable/ic_share_white"
        android:title="@string/menu_main_share_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuRate"
        android:icon="@drawable/ic_star_white"
        android:title="@string/menu_main_rate_this_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuContact"
        android:icon="@drawable/ic_email"
        android:title="@string/menu_main_contact"
        app:showAsAction="never" />
</menu>
