<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_join_map"
        android:icon="@drawable/ic_add_location_black_24dp"
        android:title="@string/title_join" />

    <item
        android:id="@+id/navigation_create_map"
        android:icon="@drawable/ic_create_trackmap"
        android:title="@string/title_create" />

    <!--<item
        android:id="@+id/navigation_search_trackmap"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_current" />-->

    <!--<item
        android:id="@+id/navigation_force_crash"
        android:icon="@drawable/ic_error_black_24dp"
        android:title="@string/title_crash" />-->

</menu>
