<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="32dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/sort_trackmaps_title"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sortByDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/sort_trackmaps_by_date"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        app:drawableStartCompat="@drawable/ic_date_calendar" />

    <TextView
        android:id="@+id/sortByName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/sort_trackmaps_by_name"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        app:drawableStartCompat="@drawable/ic_sort_by_alpha" />

    <TextView
        android:id="@+id/sortByParticipantCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/sort_trackmaps_by_participant_count"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        app:drawableStartCompat="@drawable/ic_participants" />

    <TextView
        android:id="@+id/sortByOwned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/sort_trackmaps_by_owner"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        app:drawableStartCompat="@drawable/ic_person" />

    <TextView
        android:id="@+id/sortByLiveTracking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/sort_trackmaps_by_live_tracking"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        app:drawableStartCompat="@drawable/ic_live_tracking" />
</LinearLayout>
